fixed top-lioght from cut off - deleted portfolio slideout windows - need to fixed light up and js togglines lines code

--- a/stars.css
+++ b/stars.css
@@ -1,6 +1,6 @@
 .stars-left, .stars-right {
     position: absolute;
-    top: 0;
+    top: 10px;
     width: 100%;
     height: 100%;
     overflow: hidden;
